# Owlerlay

./: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.gitea/workflows/: release.yml
.github/workflows/: release.yml
.zed/: settings.json
public/: overlay.css
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/countdown/: commands.rs  dto.rs  errors.rs  events.rs  mod.rs  model.rs  service.rs
src-tauri/src/server/: mod.rs  routes.rs
src-tauri/templates/overlay/: browsersource.html.j2  countdown.html
src-tauri/templates/overlay/countdown/: countdown.css.j2  countdown.html.j2  countdown.js.j2  countdown.script.j2  countdown.style.j2
src-tauri/tests/: countdown_model.rs
src/app/: app.css  dom.ts  init.ts
src/app/shell/: AppShell.svelte
src/app/styles/: countdown.css
src/features/countdown/: api.ts  controller.ts  helper.ts  types.ts  view.ts
src/features/countdown/api/: countdown.client.ts
src/features/countdown/components/: CountdownPage.svelte
src/features/countdown/model/: countdown.mapper.ts  countdown.types.ts
src/features/countdown/state/: countdown.store.ts
src/shared/payloads/: empty.ts
src/shared/tauri/: invoke.ts
src/shared/time/: duration.ts  format.ts
src/styles/: base.css  countdown.css
