[package]
name = "owlerlay"
version = "0.1.0"
description = "A Tauri App"
authors = ["s0wlz"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "owlerlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
minijinja = "2.15.1"
toml = "1.0.3"
chrono = "0.4.43"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
